feat: add custom pacman repo

--- a/default/pacman/pacman.conf
+++ b/default/pacman/pacman.conf
@@ -25,6 +25,10 @@ Include = /etc/pacman.d/mirrorlist
 [multilib]
 Include = /etc/pacman.d/mirrorlist
 
+[custom]
+SigLevel = Optional TrustAll
+Server = file:///home/greg/.cache/pacman/pkg
+
 [omarchy]
 SigLevel = Optional TrustAll
 Server = https://pkgs.omarchy.org/$arch
