feat: configure use of self hosted mirror

--- a/default/pacman/pacman.conf
+++ b/default/pacman/pacman.conf
@@ -1,4 +1,4 @@
-#curl http://99.188.214.55:8000/hello.txt See the pacman.conf(5) manpage for option and repository directives
+See the pacman.conf(5) manpage for option and repository directives
 
 [options]
 Color
@@ -31,4 +31,4 @@ Server = file:///var/cache/pacman/custom
 
 [omarchy]
 SigLevel = Optional TrustAll
-Server = https://pkgs.omarchy.org/$arch
+Server = http://89.125.0.102:8080/$repo/os/$arch
